scrollbar fix and safari blur effect

--- a/style.css
+++ b/style.css
@@ -24,8 +24,21 @@ body {
     background-size: 230vh;
     position: relative;
     min-height: 100vh;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x:hidden ;
+
+    /* scrollbar fix*/
+
+    
+    /*-ms-overflow-style: none;*/  /* IE and Edge */
+    /*scrollbar-width: none; */ /* Firefox */
 }
+/* Hide scrollbar for Chrome, Safari and Opera
+body::-webkit-scrollbar {
+    display: none;
+}*/
+
+
 
 .footer {
     /*position: absolute;*/
@@ -95,7 +108,17 @@ nav {
     display: flex;
     flex-direction: row;
     overflow: scroll;
+
+    /* scrollbar fix*/
+
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
+/* Hide scrollbar for Chrome, Safari and Opera */
+#content-wrap::-webkit-scrollbar {
+    display: none;
+}
+
 
 .contents-flexbox{
     flex:2;
@@ -113,6 +136,15 @@ nav {
     position: fixed;
     height: 98vh;
     width: 64vw;
+
+    /* scrollbar fix*/
+
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+.contents-flexbox::-webkit-scrollbar {
+    display: none;
 }
   
         /* contents includes contents1, 2,... and each contentsX is a card */
@@ -144,6 +176,7 @@ nav {
     /*background: #4CB9E7;*/
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.35), inset 0px 100px 100px 200px rgba(255, 255, 255, 0.08);
     backdrop-filter: blur(30px);
+    -webkit-backdrop-filter: blur(30px);
     /*! flex: 1; */
 }
 
@@ -168,6 +201,16 @@ nav {
     /*min-height: 100vh;
     max-height: 100vh;*/
     overflow: scroll;
+
+
+    /* scrollbar fix*/
+
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+#my-card::-webkit-scrollbar {
+    display: none;
 }
 
 .profile{
@@ -334,7 +377,8 @@ nav {
 
 @media only screen and (max-width: 700px) {
     body{
-        overflow: scroll;
+        overflow-y: scroll;
+        overflow-x:hidden ;
         background-image: url("src/bluewavybg-vertical.jpg");
     }
     #content-wrap{
